[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "<your lib name>"
version = "0.0.0"
description = "Your lib description"
authors = [{ name = "<your GitHub name>", email = "<your email address>" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = { text = "MIT" }
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/<your GitHub name>/<new repo>"
Repository = "https://github.com/<your GitHub name>/<new repo>"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "pytest-cov>=5.0.0,<6",
    "coverage~=6.2",
    "pytest-rerunfailures>=14.0,<15",
    "aiohttp>=3.12.13",
    "pytest-asyncio>=0.23.0,<1",
    "python-dotenv>=1.0.1,<2",
]
pre-commit-ci = [
    "pre-commit>=3.5.0,<4",
    "pylint>=3.1.0,<4",
    "mypy>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
include = ["src/"]
